base -2, rpgdiceroller, extractdomain, notverysecure, excel and source modules added

--- a/data/extensions.json
+++ b/data/extensions.json
@@ -1,3 +1,5 @@
 {
-  "events": "cogs.events.events"
+  "events": "cogs.events.events",
+  "main": "cogs.commands.main",
+  "source": "cogs.commands.source"
 }
